@@ -10,6 +10,12 @@ Wagtail 2.5 release notes - IN DEVELOPMENT
 What's new
 ==========
 
+Django 2.2 support
+~~~~~~~~~~~~~~~~~~
+
+This release is compatible with Django 2.1.  Compatibility fixes were contributed by Matt Westcott and Andy Babic.
+
+
 New Markdown shortcuts in rich text
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
