@@ -141,4 +141,6 @@ The compatible versions of Django and Python for each Wagtail release are:
 +-------------------+------------------------------+-----------------------------+
 | 2.4               | 2.0, 2.1                     | 3.4, 3.5, 3.6, 3.7          |
 +-------------------+------------------------------+-----------------------------+
+| 2.5               | 2.0, 2.1, 2.2                | 3.4, 3.5, 3.6, 3.7          |
++-------------------+------------------------------+-----------------------------+
 
